--- a/rust_game/Cargo.toml
+++ b/rust_game/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 = "0.34.4"
+
+[dependencies.sdl2]
+version = "0.34.4"
+default-features = false
+features = ["image"]
